# kroget

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  README.md  pyproject.toml
docs/: kroger_api.md
kroget/: cli.py  tui.py
kroget/core/: proposal.py  sent_items.py  storage.py
openapi/: kroger-identity-openapi.json  kroger-products-openapi.json
tests/: test_lists.py  test_lists_items_cli.py  test_openapi.py  test_proposal.py  test_sent_items.py  test_staples.py
